@@ -1,5 +1,6 @@
 Post-v2.8.0
 --------------------
+   - NSH implementation now conforms to latest draft (draft-ietf-sfc-nsh-28).
    - OVN:
      * The "requested-chassis" option for a logical switch port now accepts a
        chassis "hostname" in addition to a chassis "name".
